--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     apply plugin: 'kotlin-android-extensions'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
